mj.css: fix for the missaligned readonly text in dialogs

--- a/src/main/webapp/mj.css
+++ b/src/main/webapp/mj.css
@@ -313,6 +313,9 @@ dialog table div div {
 	padding: 0px;
 }
 
+dialog table div.ReadOnlyTextField {
+}
+
 table.form td, table.form th {
 	padding-top: 1ex;
 	padding-bottom: 1ex;
